Load deck links in parent window

--- a/public/deck.html
+++ b/public/deck.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <base target="_parent" />
+  </head>
+  <body>
 <style>
 * { margin: 0px; padding: 0px; }
 body { font-size: 11px; font-family: Arial, sans-serif; text-align:center; }
